--- a/video/index3.html
+++ b/video/index3.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(92, 225, 65);
+            background-color: rgb(65, 220, 225);
         }
 
         #pixel-grid {
@@ -16,6 +16,7 @@
             grid-template-rows: repeat(20, 1fr);
             width: 400px;
             height: 400px;
+            transform: scaleX(-1); /* Speilvend pikselrutenettet */
         }
         .pixel {
             width: 20px;
