--- a/video/index3.html
+++ b/video/index3.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(65, 220, 225);
+            background-color: rgb(225, 84, 65);
         }
 
         #pixel-grid {
@@ -64,6 +64,7 @@
                             pixelGrid[y][x] = true;
                             context.fillStyle = '#000';
                             context.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
+                            console.log(context);
                         }
                     } else {
                         pixelGrid[y][x] = false;
