--- a/chatGPT/index2.html
+++ b/chatGPT/index2.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(166, 127, 228);
+            background-color: rgb(228, 127, 198);
         }
 
         #pixel-grid {
@@ -38,7 +38,7 @@
                 pixelGrid[i] = [];
                 for (let j = 0; j < 20; j++) {
                     pixelGrid[i][j] = false;
-                    console.log(pixelGrid[i][j]);
+                    console.log(pixelgrid[i][j]);
                 }
             }
         };
