--- a/chatGPT/index2.html
+++ b/chatGPT/index2.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(228, 127, 198);
+            background-color: rgb(137, 127, 228);
         }
 
         #pixel-grid {
@@ -61,7 +61,7 @@
                 pixelGrid[i] = [];
                 for (let j = 0; j < 20; j++) {
                     pixelGrid[i][j] = false;
-                    console.log(pixelgrid[i][j]);
+                    console.log(pixelGrid[i][j]);
                 }
             }
         };
@@ -134,13 +134,6 @@ let isPlaying = false;
 let timerId;
 
 
-//const interval2 = 500;
-slider.oninput = function() {
-    interval = this.value;
-    console.log(this.value);
-
-    }
-    console.log(interval);
 // Initialiserer Game of Life grid
 let grid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
 
