--- a/video/index3.html
+++ b/video/index3.html
@@ -64,7 +64,7 @@
                             pixelGrid[y][x] = true;
                             context.fillStyle = '#000';
                             context.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
-                            console.log(pixelGrid[y][x]);
+                            console.log(pixelGrid[y]);
                             
                         }
                     } else {
