--- a/chatGPT/index2.html
+++ b/chatGPT/index2.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(127, 228, 149);
+            background-color: rgb(137, 127, 228);
         }
 
         #grid {
@@ -38,7 +38,8 @@
 </head>
 <body>
 
-    <div id="grid"> <canvas width="20" height="20" id="grid"></canvas></div>
+    <div id="grid"> </div>
+    <canvas width="20" height="20" id="grid"></canvas>
     <button id="playPause">Play / Pause</button>
     <button id="clear">Clear</button>
     <button id="glider">Draw glider</button>
@@ -56,7 +57,7 @@
                 pixelGrid[i] = [];
                 for (let j = 0; j < 20; j++) {
                     pixelGrid[i][j] = false;
-                    console.log(pixelGrid[i][j]);
+                    
                 }
             }
         };
@@ -83,6 +84,7 @@
                             pixelGrid[y][x] = true;
                             context.fillStyle = '#000';
                             context.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
+                            console.log(pixelGrid);
                             
                         }
                     } else {
