--- a/video/index3.html
+++ b/video/index3.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(166, 127, 228);
+            background-color: rgb(221, 228, 127);
         }
 
         #pixel-grid {
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <canvas id="pixel-grid"></canvas>
+    <canvas id="pixel-grid" width="20" height="20"></canvas>
 
     <script>
         const pixelSize = 30;
