--- a/chatGPT/index3.html
+++ b/chatGPT/index3.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(226, 228, 127);
+            background-color: rgb(129, 127, 228);
         }
 
         #pixel-grid {
@@ -146,7 +146,7 @@ let availableSynths = [];
 const pentatonicScale = ['D2', 'E2', 'G2', 'A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4', 'C5', 'D5', 'E5', 'G5', 'A5', 'C6', ];
 
 // Oppretter grid-elementer i HTML
-const gridContainer = document.getElementById('pixel-grid');
+const gridContainer = document.getElementById('grid');
 for (let i = 0; i < rows; i++) {
     for (let j = 0; j < cols; j++) {
         const cell = document.createElement('div');
