--- a/video/index3.html
+++ b/video/index3.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(221, 228, 127);
+            background-color: rgb(159, 228, 127);
         }
 
         #pixel-grid {
@@ -64,7 +64,7 @@
                             pixelGrid[y][x] = true;
                             context.fillStyle = '#000';
                             context.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
-                            console.log(pixelGrid[y]);
+                            console.log(pixelGrid);
                             
                         }
                     } else {
