--- a/chatGPT/index3.html
+++ b/chatGPT/index3.html
@@ -7,10 +7,15 @@
     <style>
 
         body {
-            background-color: rgb(218, 228, 127);
+            background-color: rgb(142, 127, 228);
         }
 
         #pixel-grid {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             display: grid;
             grid-template-columns: repeat(20, 30px);
             grid-template-rows: repeat(20, 30px);
@@ -25,6 +30,11 @@
         }
 
         #grid {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             display: grid;
             grid-template-columns: repeat(20, 30px);
             grid-template-rows: repeat(20, 30px);
