--- a/chatGPT/index3.html
+++ b/chatGPT/index3.html
@@ -7,7 +7,13 @@
     <style>
 
         body {
-            background-color: rgb(142, 127, 228);
+            background-color: rgb(184, 228, 127);
+        }
+
+        #video-container {
+            position: relative;
+            width: 400px; /* Just an example width */
+            height: 300px; /* Just an example height */
         }
 
         #pixel-grid {
@@ -53,8 +59,15 @@
     </style>
 </head>
 <body>
-    <canvas id="pixel-grid"></canvas>
-    <div id="grid"></div>
+
+    <div id="video-container">
+        <canvas id="pixel-grid"></canvas>
+        <div id="grid"></div>
+
+    </div>
+
+
+
     <button id="playPause">Play / Pause</button>
     <button id="clear">Clear</button>
     <button id="glider">Draw glider</button>
