--- a/chatGPT/index3.html
+++ b/chatGPT/index3.html
@@ -7,14 +7,21 @@
     <style>
 
         body {
-            background-color: rgb(184, 228, 127);
+            background-color: rgb(79, 153, 64);
         }
 
         #video-container {
             position: relative;
             width: 400px; /* Just an example width */
-            height: 300px; /* Just an example height */
+            height: 400px; /* Just an example height */
         }
+
+        #controls {
+            position: relative;
+            width: 400px; /* Just an example width */
+            height: 400px; /* Just an example height */
+        }
+
 
         #pixel-grid {
             position: absolute;
@@ -67,11 +74,11 @@
     </div>
 
 
-
+<div id="controls">
     <button id="playPause">Play / Pause</button>
     <button id="clear">Clear</button>
     <button id="glider">Draw glider</button>
-    
+</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
 
