--- a/chatGPT/index3.html
+++ b/chatGPT/index3.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(84, 168, 216);
+            background-color: rgb(192, 216, 84);
         }
 
         #video-container {
@@ -17,7 +17,7 @@
         }
 
         #controls {
-            position: absolute;
+            position: static;
             width: 400px; /* Just an example width */
             height: 400px; /* Just an example height */
         }
