--- a/chatGPT/index3.html
+++ b/chatGPT/index3.html
@@ -6,7 +6,7 @@
     <title>Webcam to Pixel Grid</title>
     <style>
         body {
-            background-color: rgb(84, 157, 216);
+            background-color: rgb(86, 84, 216);
             margin: 0;
             padding: 0;
         }
@@ -27,11 +27,16 @@
             position: absolute;
             top: 0;
             left: 0;
+        }
+
+        #video {
             width: 100%;
             height: 100%;
         }
 
         #pixel-grid {
+            width: 640px;
+            height: 480px;
             transform: scaleX(-1); /* Speilvend pikselrutenettet */
         }
 
@@ -49,10 +54,7 @@
 <body>
 
     <div id="video-container">
-        <video id="video" autoplay muted>
-            <source src="path/to/your/video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <video id="video" autoplay muted></video>
         <canvas id="pixel-grid"></canvas>
         <div id="grid"></div>
     </div>
@@ -62,13 +64,6 @@
         <button id="clear">Clear</button>
         <button id="glider">Draw glider</button>
     </div>
-
-
-<div id="controls">
-    <button id="playPause">Play / Pause</button>
-    <button id="clear">Clear</button>
-    <button id="glider">Draw glider</button>
-</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
 
