--- a/chatGPT/index3.html
+++ b/chatGPT/index3.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webcam to Pixel Grid</title>
     <style>
+
         body {
-            background-color: rgb(216, 126, 84);
-            margin: 0;
-            padding: 0;
+            background-color: rgb(99, 216, 84);
         }
 
         #video-container {
             position: relative;
             width: 640px; /* Just an example width */
-            height: 480px; /* Just an example height */
+            height: 640px; /* Just an example height */
         }
 
         #controls {
@@ -23,27 +22,42 @@
             height: 400px; /* Just an example height */
         }
 
-        #video, #pixel-grid {
+
+        #pixel-grid {
             position: absolute;
             top: 0;
             left: 0;
-        }
-
-        #video {
             width: 100%;
             height: 100%;
-        }
-
-        #pixel-grid {
+            display: grid;
+            grid-template-columns: repeat(20, 30px);
+            grid-template-rows: repeat(20, 30px);
             width: 640px;
-            height: 480px;
+            height: 640px;
             transform: scaleX(-1); /* Speilvend pikselrutenettet */
         }
-
-        .pixel, .cell {
+        .pixel {
             width: 30px;
             height: 30px;
             border: 1px solid #000;
+        }
+
+        #grid {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 640px;
+            height: 640px;
+            display: grid;
+            grid-template-columns: repeat(20, 30px);
+            grid-template-rows: repeat(20, 30px);
+            transform: scaleX(-1); /* Speilvend pikselrutenettet */
+        }
+
+        .cell {
+            width: 30px;
+            height: 30px;
+            border: 2px solid rgb(253, 86, 8);
         }
 
         .alive {
@@ -54,16 +68,17 @@
 <body>
 
     <div id="video-container">
-        <video id="video" autoplay muted></video>
         <canvas id="pixel-grid"></canvas>
         <div id="grid"></div>
+
     </div>
 
-    <div id="controls">
-        <button id="playPause">Play / Pause</button>
-        <button id="clear">Clear</button>
-        <button id="glider">Draw glider</button>
-    </div>
+
+<div id="controls">
+    <button id="playPause">Play / Pause</button>
+    <button id="clear">Clear</button>
+    <button id="glider">Draw glider</button>
+</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
 
