--- a/chatGPT/index3.html
+++ b/chatGPT/index3.html
@@ -7,13 +7,13 @@
     <style>
 
         body {
-            background-color: rgb(99, 216, 84);
+            background-color: rgb(12, 250, 230);
         }
 
         #video-container {
             position: relative;
-            width: 640px; /* Just an example width */
-            height: 640px; /* Just an example height */
+        /*    width: 640px; /* Just an example width */
+        /*    height: 640px; /* Just an example height */
         }
 
         #controls {
@@ -32,8 +32,8 @@
             display: grid;
             grid-template-columns: repeat(20, 30px);
             grid-template-rows: repeat(20, 30px);
-            width: 640px;
-            height: 640px;
+       /*   width: 640px;
+            height: 640px; */
             transform: scaleX(-1); /* Speilvend pikselrutenettet */
         }
         .pixel {
@@ -46,8 +46,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 640px;
-            height: 640px;
+        /*    width: 640px;
+            height: 640px;*/
             display: grid;
             grid-template-columns: repeat(20, 30px);
             grid-template-rows: repeat(20, 30px);
@@ -57,11 +57,11 @@
         .cell {
             width: 30px;
             height: 30px;
-            border: 2px solid rgb(253, 86, 8);
+            border: 2px solid rgb(253, 8, 200);
         }
 
         .alive {
-            background-color: rgb(146, 83, 11);
+            background-color: rgb(20, 2, 3);
         }
     </style>
 </head>
