--- a/chatGPT/index3.html
+++ b/chatGPT/index3.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(12, 250, 230);
+            background-color: rgb(12, 123, 250);
         }
 
         #video-container {
@@ -46,8 +46,8 @@
             position: absolute;
             top: 0;
             left: 0;
-        /*    width: 640px;
-            height: 640px;*/
+            width: 640px;
+            height: 640px;
             display: grid;
             grid-template-columns: repeat(20, 30px);
             grid-template-rows: repeat(20, 30px);
