--- a/chatGPT/index3.html
+++ b/chatGPT/index3.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webcam to Pixel Grid</title>
+    <title>Webcam to Pixel Grid 2</title>
     <style>
 
         body {
-            background-color: rgb(12, 123, 250);
+            background-color: rgb(155, 12, 250);
         }
 
         #video-container {
             position: relative;
-        /*    width: 640px; /* Just an example width */
-        /*    height: 640px; /* Just an example height */
+            width: 640px; /* Just an example width */
+            height: 640px; /* Just an example height */
         }
 
         #controls {
@@ -32,8 +32,8 @@
             display: grid;
             grid-template-columns: repeat(20, 30px);
             grid-template-rows: repeat(20, 30px);
-       /*   width: 640px;
-            height: 640px; */
+          width: 640px;
+            height: 640px; 
             transform: scaleX(-1); /* Speilvend pikselrutenettet */
         }
         .pixel {
