--- a/chatGPT/index4.html
+++ b/chatGPT/index4.html
@@ -6,7 +6,7 @@
     <title>Square Webcam Input</title>
     <style>
         body {
-            background-color: #e00707;
+            background-color: #43a10d;
             margin: 0;
             padding: 0;
         }
@@ -19,7 +19,7 @@
         }
 
         #video {
-            width: 100%; /* Gjør bredden dobbelt så stor som høyden for å opprettholde kvadratisk form */
+            width: 150%; /* Gjør bredden dobbelt så stor som høyden for å opprettholde kvadratisk form */
             height: 100%;
             display: block;
             object-fit: cover; /* Justerer video for å dekke hele området */
