--- a/chatGPT/index.html
+++ b/chatGPT/index.html
@@ -11,6 +11,7 @@
     <button id="playPause">Play / Pause</button>
     <button id="clear">Clear</button>
     <button id="glider">Draw glider</button>
+    <button id="glider2">Draw glider 2</button>
     
     <div class="slidecontainer">
         <input type="range" min="50" max="1000" value="500" class="slider" id="myRange">
