--- a/chatGPT/index.html
+++ b/chatGPT/index.html
@@ -12,6 +12,7 @@
     <button id="clear">Clear</button>
     <button id="glider">Draw glider</button>
     <button id="glider2">Draw glider 2</button>
+    <button id="4gliders">Draw 4 gliders</button>
     
     <div class="slidecontainer">
         <input type="range" min="50" max="1000" value="500" class="slider" id="myRange">
