--- a/chatGPT/square_video.html
+++ b/chatGPT/square_video.html
@@ -7,10 +7,10 @@
 <style>
 
     body {
-        background-color: salmon;
+        background-color: rgb(130, 250, 114);
     }
   video {
-    display: none; /* Skjul videoelementet, da vi bare trenger det for strømtilgang */
+   /* display: none; /* Skjul videoelementet, da vi bare trenger det for strømtilgang */
   }
 </style>
 </head>
