--- a/chatGPT/square_video.html
+++ b/chatGPT/square_video.html
@@ -10,7 +10,7 @@
         background-color: rgb(130, 250, 114);
     }
   video {
-   /* display: none; /* Skjul videoelementet, da vi bare trenger det for strømtilgang */
+    display: none; /* Skjul videoelementet, da vi bare trenger det for strømtilgang */
   }
 </style>
 </head>
