--- a/chatGPT/video2.html
+++ b/chatGPT/video2.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(110, 96, 238);
+            background-color: rgb(96, 238, 120);
         }
 
         #video-container {
@@ -43,7 +43,7 @@
             top: 0;
             left: 0;
             width: 640px;
-            height: 640px;
+            height: 480px;
             display: grid;
             grid-template-columns: repeat(20, 32px);
             grid-template-rows: repeat(20, 32px);
@@ -60,7 +60,7 @@
             background-color: rgb(20, 2, 3);
         }
         video {
-    display: none; /* Skjul videoelementet, da vi bare trenger det for strømtilgang */
+  /*  display: none; /* Skjul videoelementet, da vi bare trenger det for strømtilgang */
   }
     </style>
 </head>
