--- a/chatGPT/video2.html
+++ b/chatGPT/video2.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(238, 228, 96);
+            background-color: rgb(238, 96, 207);
         }
 
         #video-container {
@@ -59,8 +59,9 @@
         .alive {
             background-color: rgb(20, 2, 3);
         }
-
-        
+        video {
+    display: none; /* Skjul videoelementet, da vi bare trenger det for strømtilgang */
+  }
     </style>
 </head>
 <body>
