--- a/chatGPT/video.html
+++ b/chatGPT/video.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webcam to Pixel Grid 2</title>
+    <title>Crafting Sounds</title>
     <style>
 
         body {
-            background-color: rgb(188, 238, 96);
+            background-color: rgb(248, 145, 240);
         }
 
         #video-container {
@@ -88,7 +88,7 @@
         let pixelGrid = [];
 
         const initPixelGrid = () => {
-            for (let i = 0; i < 20; i++) {
+            for (let i = 0; i < 15; i++) {
                 pixelGrid[i] = [];
                 for (let j = 0; j < 20; j++) {
                     pixelGrid[i][j] = false;
