--- a/chatGPT/video.html
+++ b/chatGPT/video.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crafting Sounds</title>
+    <title>Crafting</title>
     <style>
 
         body {
-            background-color: rgb(248, 246, 145);
+            background-color: rgb(96, 174, 238);
         }
 
         #video-container {
@@ -88,7 +88,7 @@
         let pixelGrid = [];
 
         const initPixelGrid = () => {
-            for (let i = 0; i < 15; i++) {
+            for (let i = 0; i < 20; i++) {
                 pixelGrid[i] = [];
                 for (let j = 0; j < 20; j++) {
                     pixelGrid[i][j] = false;
@@ -104,7 +104,7 @@
           //  context.drawImage(videoElement, 0, 0, videoWidth, videoHeight);
             const imageData = context.getImageData(0, 0, videoWidth, videoHeight).data;
             
-            for (let y = 0; y < 15; y++) {
+            for (let y = 0; y < 20; y++) {
                 for (let x = 0; x < 20; x++) {
                     const pixelIndex = (y * videoWidth * 4 * pixelSize) + (x * 4 * pixelSize);
                     let averageBrightness = 0;
@@ -168,7 +168,7 @@ const polySynth = new Tone.PolySynth().toDestination();
 // Definerer parametere for Game of Life
 
 const rows = 20;
-const cols = 15;
+const cols = 20;
 let interval = 500 // Tidsintervall i millisekunder
 let isPlaying = false;
 let timerId;
